--- a/package.json
+++ b/package.json
@@ -22,14 +22,13 @@
     "@trpc/next": "^10.9.0",
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
-    "@vidstack/react": "^0.4.2",
     "classnames": "^2.3.2",
     "next": "^13.2.1",
     "next-auth": "^4.19.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-player": "^2.12.0",
     "superjson": "1.9.1",
-    "vidstack": "^0.4.2",
     "zod": "^3.20.6"
   },
   "devDependencies": {
