--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
     "classnames": "^2.3.2",
+    "immer": "^9.0.19",
     "next": "^13.2.1",
     "next-auth": "^4.19.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-player": "^2.12.0",
     "superjson": "1.9.1",
-    "zod": "^3.20.6"
+    "zod": "^3.20.6",
+    "zustand": "^4.3.6"
   },
   "devDependencies": {
     "@types/eslint": "^8.21.1",
