--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-player": "^2.12.0",
+    "screenfull": "^6.0.2",
     "superjson": "1.9.1",
     "zod": "^3.20.6",
     "zustand": "^4.3.6"
